--- a/index.css
+++ b/index.css
@@ -103,6 +103,7 @@ h1{
 	text-shadow: 4px 4px steelblue;
 	position: absolute;
 	top:4%;
+    padding-bottom: 500px;
 	
 }
 
@@ -111,8 +112,6 @@ h1{
 	bottom: 0;
 	width: 100%;
 	height: 200px;
-	
-
 }
 
 .buttons button{
