--- a/index.css
+++ b/index.css
@@ -4,6 +4,12 @@ html{
 	font-family: 'Orbitron', sans-serif;
 }
 
+body{
+    height: 100%;
+    width: 80%;
+    margin: auto;
+}
+
 .circlesoflove{
 	border: steelblue 5px solid;
 	background: black;
@@ -101,27 +107,33 @@ h1{
 	font-size: 10em;
 	color: white;
 	text-shadow: 4px 4px steelblue;
-	position: absolute;
-	top:4%;
-    padding-bottom: 500px;
+    margin-bottom: -200px; 
+    min-height: 100%;
 	
 }
-
+h1:after{
+    content: "";
+  display: block;
+    height: 200px;
+}
 .buttons{
-	position: absolute;
-	bottom: 0;
+	
 	width: 100%;
 	height: 200px;
+    position:relative;
+    top:50;
 }
 
 .buttons button{
-	width: 49%;
+	width: 100%;
 	font-family: 'Orbitron', sans-serif;
 	border-radius: 12px;
-	font-size: 2.5em;
+	font-size: 2em;
 	background: steelblue;
 	color: black;
 	height: 100%;
+    margin: 16px 0px;
+    
 
 }
 
