--- a/test.css
+++ b/test.css
@@ -3,6 +3,23 @@ html{
 	font-family: 'Gloria Hallelujah', cursive;
     height: 100%;
 }
+  #loader {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    z-index: 1;
+    width: 150px;
+    height: 150px;
+    margin: -75px 0 0 -75px;
+    border: 16px solid steelblue;
+    border-radius: 50%;
+    border-top: 16px solid white;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+  }
+
 #header{
 	background-color: black;
 	color:white;
@@ -99,4 +116,9 @@ button{
     75% {background: rgba(255,0,0,.5);} 
     100% {background: lightgray;}
 
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
