--- a/test.css
+++ b/test.css
@@ -3,6 +3,47 @@ html{
 	font-family: 'Gloria Hallelujah', cursive;
     height: 100%;
 }
+
+#menuIcon{
+    position: absolute;
+    left: 5%;
+    top: 2.5%;
+    z-index: 4;
+}
+
+.white{
+    color:white;
+}
+
+.black{
+    color:black;
+}
+
+
+
+#menu{
+    z-index: 3;
+    position: absolute;
+    width: 50%;
+    background: white;
+    border: solid black 1px;
+    text-align: center;
+    border-radius: 8px;
+    overflow: hidden;
+    transition: left linear .2s;
+    padding: 4px;
+    
+}
+
+.show{
+    
+    left: 3%;
+}
+
+.hide{
+    left: -53%;
+}
+
   #loader {
     position: absolute;
     left: 50%;
@@ -16,7 +57,6 @@ html{
     border-top: 16px solid white;
     width: 120px;
     height: 120px;
-    -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
   }
 
@@ -85,9 +125,11 @@ html{
 
 button{
     background-color: steelblue;
-    width:50%;
+    width: 30%;
+    height: 100%;
     font-size: 1em;
     border-radius: 8px;
+    padding: 8px 0px;
 }
 
 @media only screen and (max-width: 400px) {
