--- a/index.css
+++ b/index.css
@@ -118,30 +118,31 @@ h1:after{
 }
 .buttons{
 	
-	width: 100%;
-	height: 200px;
+	width: 500px;
+	height: 500px;
     position:relative;
     top:50;
+    margin: auto;
+    color: white;
 }
 
 .buttons button{
 	width: 100%;
 	font-family: 'Jura', sans-serif;
-	border-radius: 12px;
 	font-size: 4em;
-	background: steelblue;
-	color: black;
+	background: #292b2d;
 	height: 100%;
-    margin: 16px 0px;
+    border-radius: 50%;
+    border: white 15px solid;
+    color: white;
     
 
 }
 
-.buttons button a{
-	text-decoration: none;
-	color: black;
+.buttons button:hover{
+    background: white;
+    color: #292b2d;
 }
-
 @keyframes go {
     0% {border-color: steelblue; }
     50% {border-color: gray; }
