--- a/test.css
+++ b/test.css
@@ -21,6 +21,7 @@ html{
 
 
 
+
 #menu{
     z-index: 3;
     position: absolute;
@@ -76,6 +77,19 @@ html{
     height: 120px;
     animation: spin 2s linear infinite;
   }
+  
+  #newHighScore{
+	position: absolute;
+	z-index: 10;
+	 width: 90%;
+    background: lightgray;
+    border: solid black 1px;
+    text-align: center;
+    border-radius: 8px;
+    overflow: hidden;
+    transition: left linear .2s;
+    padding: 4px;
+}
 
 #header{
 	color:white;
