--- a/test.css
+++ b/test.css
@@ -3,7 +3,9 @@ html{
 	font-family: 'Jura', sans-serif;
     height: 100%;
 }
-
+#main{
+	display: none;
+}
 #menuIcon{
     position: absolute;
     left: 5%;
