--- a/test.css
+++ b/test.css
@@ -137,7 +137,7 @@ html{
     appearance: none;
     width: 40px;
     height: 40px;
-    background: white;
+    background: url("slide.png");
     cursor: pointer;
     border-radius: 50%;
 }
@@ -145,7 +145,7 @@ html{
 .slider::-moz-range-thumb {
     width: 40px;
     height: 40px;
-    background: white;
+    background: url("slide.png");
     cursor: pointer;
     border-radius: 50%;
 } 
