--- a/test.css
+++ b/test.css
@@ -118,14 +118,16 @@ html{
 
 #slidecontainer{
 	width: 50%;
-	margin:auto;
+	margin-top: 25px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .slider {
     margin-top: 100px;
     -webkit-appearance: none;
     width: 100%;
-    height: 30px;
+    height: 0px;
     border-radius: 15px;
     background: #292b2d;
     outline: none;
