--- a/test.css
+++ b/test.css
@@ -139,6 +139,18 @@ html{
     border-radius: 50%;
 }
 
+.slider::-moz-range-track {
+    margin-top: 100px;
+    -webkit-appearance: none;
+    width: 100%;
+    height: 0px;
+    border-radius: 15px;
+    background: #292b2d;
+    outline: none;
+    opacity: 0.7;
+    transition: opacity .2s;
+}
+
 .slider::-moz-range-thumb {
     width: 40px;
     height: 40px;
@@ -146,6 +158,18 @@ html{
     cursor: pointer;
     border-radius: 50%;
 } 
+
+.slider::-ms-track {
+    margin-top: 100px;
+    -webkit-appearance: none;
+    width: 100%;
+    height: 0px;
+    border-radius: 15px;
+    background: #292b2d;
+    outline: none;
+    opacity: 0.7;
+    transition: opacity .2s;
+}
 
 .slider::-ms-thumb  {
     width: 40px;
