--- a/test.css
+++ b/test.css
@@ -140,7 +140,7 @@ html{
     appearance: none;
     width: 40px;
     height: 40px;
-    background: url("slide.png");
+    background: white;
     cursor: pointer;
     border-radius: 50%;
 }
@@ -160,7 +160,7 @@ html{
 .slider::-moz-range-thumb {
     width: 40px;
     height: 40px;
-    background: url("slide.png");
+    background: white;
     cursor: pointer;
     border-radius: 50%;
 } 
@@ -180,7 +180,7 @@ html{
 .slider::-ms-thumb  {
     width: 40px;
     height: 40px;
-    background: url("slide.png");
+    background: white;
     cursor: pointer;
     border-radius: 50%;
 } 
@@ -218,6 +218,16 @@ button{
     }
     
 }
+
+@media only screen and (min-width: 500px) {
+	body{
+		max-height: 800px;
+		max-width: 500px;
+		margin: auto;
+	}
+    
+}
+
 
 
 @keyframes done {
