--- a/test.css
+++ b/test.css
@@ -2,6 +2,8 @@ html{
 	background-color: #292b2d;
 	font-family: 'Jura', sans-serif;
     height: 100%;
+    transition: background 3s;
+    -webkit-transition: background 3s;
 }
 #main{
 	display: none;
@@ -37,8 +39,14 @@ html{
     border-radius: 8px;
     overflow: hidden;
     transition: left linear .2s;
+    -webkit-transition: left linear .2s;
     padding: 4px;
     
+}
+
+#circle{
+    transition: stroke 3s;
+    -webkit-transition: stroke 3s;
 }
 .items{
 	width: 80%;
@@ -83,6 +91,7 @@ html{
     width: 120px;
     height: 120px;
     animation: spin 2s linear infinite;
+      -webkit-animation: spin 2s linear infinite;
   }
   
   #newHighScore{
@@ -157,6 +166,7 @@ html{
     outline: none;
     opacity: 0.7;
     transition: opacity .2s;
+    -webkit-transition: opacity .2s;
 }
  .slider::-webkit-slider-thumb {
     -webkit-appearance: none;
@@ -178,6 +188,7 @@ html{
     outline: none;
     opacity: 0.7;
     transition: opacity .2s;
+    -webkit-transition: opacity .2s;
 }
 
 .slider::-moz-range-thumb {
@@ -198,6 +209,7 @@ html{
     outline: none;
     opacity: 0.7;
     transition: opacity .2s;
+    -webkit-transition: opacity .2s;
 }
 
 .slider::-ms-thumb  {
