--- a/index.css
+++ b/index.css
@@ -30,81 +30,10 @@ body{
 	position: absolute;
 }
 
-#circle1{
-	top: 5%;
-	left: 20%;
-	z-index: -1
-}
 
-#circle2{
-	top: 21%;
-	left: 53%;
-	z-index: -1
-}
-
-#circle3{
-	top: 32%;
-	left: 75%;
-	z-index: -1
-}
-
-#circle4{
-	top:56%;
-	left: 89%;
-	z-index: -1
-}
-
-#circle5{
-	top: 39%;
-	left: 34%;
-	z-index: -1
-}
-
-#circle6{
-	top: 65%;
-	left: 10%;
-	z-index: -1
-}
-
-#circle7{
-	top: 89%;
-	left: 23%;
-	z-index: -1
-}
-
-#circle8{
-	top: 56%;
-	left: 23%;
-	z-index: -1
-}
-#circle9{
-	top: 89%;
-	left: 80%;
-	z-index: -1
-}
-#circle10{
-	top: 15%;
-	left: 24%;
-	z-index: -1
-}
-#circle11{
-	top: 13%;
-	left: 45%;
-	z-index: -1
-}
-#circle12{
-	top: 86%;
-	left: 34%;
-	z-index: -1
-}
-#circle13{
-	top: 45%;
-	left: 10		%;
-	z-index: -1
-}
 h1{
 	text-align:center;
-	font-size: 13em;
+	font-size: 5em;
 	color: white;
 	text-shadow: 4px 4px steelblue;
     margin-bottom: -200px; 
@@ -118,23 +47,23 @@ h1:after{
 }
 .buttons{
 	
-	width: 500px;
-	height: 500px;
+	width: 200px;
+	height: 200px;
     position: absolute;
     bottom: 20%;
     left: 50%;
-    margin-left: -250px;
+    margin-left: -100px;
     color: white;
 }
 
 .buttons button{
 	width: 100%;
 	font-family: 'Jura', sans-serif;
-	font-size: 4em;
+	font-size: 2em;
 	background: #292b2d;
 	height: 100%;
     border-radius: 50%;
-    border: white 15px solid;
+    border: white 5px solid;
     color: white;
     margin-top: 30%;
     margin-top: 30%;
@@ -158,4 +87,23 @@ h1:after{
     50% {height:150px; width:150px;}
     100% {height:100px; width:100px;}
 
+}
+
+@media only screen and (min-width: 500px) {
+	.buttons{
+		height:300px;
+        width: 300px;
+        margin-left: -150px;
+	}
+     
+}
+
+@media only screen and (max-height: 400px) {
+	.buttons{
+		height:100px;
+        width: 100px;
+        margin-left: -50px;
+        font-size: .5em;
+	}
+     
 }
